Upgrade to Spring Boot 3.1 and Spring Cloud 2022 (#150)
* Major upgrade
  * to Spring Boot 3.1
  * upgrade all dependencies and plugins to latest available
  * fix test configuration properties
  * fix references to test-resources
  * json schema validator changed groupId
  * auth0 provider changed to okta-spring-boot-starter
  * security configuration implementation changes - remain untested, just enough to compile

* Round 2 of updates
* still finding a path thru the woods
* Had to adjust Spring Boot Maven Plugin configuration for deployables
  * @see https://docs.spring.io/spring-boot/docs/current/maven-plugin/reference/htmlsingle/#packaging.examples.local-artifact
  * Had to adjust Spring Cloud Streams b/c there's quite a bit of change from 2.x to 3.x
    * @see https://dev.to/habutre/migrating-spring-cloud-stream-v2-to-v3-5dip
* Fix broken validation assertion logi in Ingest service stub
* Adjusted test configuration for Ingest; added disable flags and exclude autoconfigs

* More updates
  * Replace mysql-connector-java with more recent db driver myql-connector-j
  * Whitespace removal
  * Don't override Spring Boot 3.1.x parent's management of Flyway dependency version
  * Remove traces of javax.* and jsr305 dependencies and properties

* Temporarily disable Sproc testing
* due to open issue https://github.com/flyway/flyway/issues/3782
* also temporarily add H2 console support to test in @BeforeAll annotated method
  * need to figure out why stored entity attribute values are getting truncated; either on persistence or retrieval

* First full successful build
  * but we're not done yet
  * had to plumb some new Flyway placeholders to support quirkiness of H2 and Java 17 wrt nanosecond precision of TIMESTAMP
  * had to update the casted type to return not just the first character but the full value persisted from tables participating in all_entity_values view
  * improve logging levels for troubleshooting in test-resources/appli