@@ -66,15 +66,15 @@ import com.fns.grivet.service.SchemaService;
 @ExtendWith(value = { SpringExtension.class, RestDocumentationExtension.class })
 @SpringBootTest(classes = PersistInit.class)
 public class PersistDocumentationTest {
-    
+
     @Autowired
     private ResourceLoader resolver;
 
     @Autowired
     private WebApplicationContext context;
-        
+
     private MockMvc mockMvc;
-    
+
     @BeforeEach
     public void setUp(RestDocumentationContextProvider restDocumentation) {
         RestDocumentationResultHandler document = document("{method-name}", preprocessRequest(prettyPrint()), preprocessResponse(prettyPrint()));
@@ -83,7 +83,7 @@ public class PersistDocumentationTest {
                 .alwaysDo(document)
                 .build();
     }
-    
+
     @AfterEach
     public void tearDown() {
         context.getBean(EntityRepository.class).deleteAll();
@@ -98,7 +98,7 @@ public class PersistDocumentationTest {
             defineTypes("TestMultipleTypes");
             linkSchema("CourseSchema");
             mockMvc.perform(
-                    post("/api/v1/type")
+                    post("/type")
                             .header("Type", "Course")
                             .contentType(MediaType.APPLICATION_JSON)
                             .content(payload("CourseCreateData"))
@@ -108,13 +108,13 @@ public class PersistDocumentationTest {
             fail(e.getMessage());
         }
     }
-    
+
     @Test
     public void createMultiple() {
         try {
             defineTypes("TestMultipleTypes");
             mockMvc.perform(
-                    post("/api/v1/types")
+                    post("/types")
                             .contentType(MediaType.APPLICATION_JSON)
                             .header("Type", "Contact")
                             .content(payload("TestMultipleContactsData"))
@@ -124,7 +124,7 @@ public class PersistDocumentationTest {
             fail(e.getMessage());
         }
     }
-    
+
     @Test
     public void updateOne() {
         try {
@@ -132,7 +132,7 @@ public class PersistDocumentationTest {
             createTypes("Course", "CourseData");
             Long oid = fetchAType("Course");
             mockMvc.perform(
-                    patch("/api/v1/type")
+                    patch("/type")
                             .param("oid", String.valueOf(oid))
                             .contentType(MediaType.APPLICATION_JSON)
                             .content(payload("CourseUpdateData"))
@@ -142,14 +142,14 @@ public class PersistDocumentationTest {
             fail(e.getMessage());
         }
     }
-    
+
     @Test
     public void deleteOne() {
         try {
             defineType("TestType2");
             Long oid = createType("TestType2", "TestTypeData2");
             mockMvc.perform(
-                    delete("/api/v1/type")
+                    delete("/type")
                             .param("oid", String.valueOf(oid))
                             .contentType(MediaType.APPLICATION_JSON)
                     )
@@ -166,7 +166,7 @@ public class PersistDocumentationTest {
             defineType("TestType2");
             createType("TestType2", "TestTypeData2");
             mockMvc.perform(
-                    get("/api/v1/type/TestType2")
+                    get("/type/TestType2")
                             .contentType(MediaType.APPLICATION_JSON)
                     )
             .andExpect(status().isOk())
@@ -175,7 +175,7 @@ public class PersistDocumentationTest {
             fail(e.getMessage());
         }
     }
-    
+
     @Test
     // GET (bounded by createdTimeStart and createdTimeEnd)
     public void fetchByTimeRange() {
@@ -185,7 +185,7 @@ public class PersistDocumentationTest {
             String createdTimeStart = LocalDateTime.now().minusMinutes(15).format(DateTimeFormatter.ISO_LOCAL_DATE_TIME);
             String createdTimeEnd = LocalDateTime.now().format(DateTimeFormatter.ISO_LOCAL_DATE_TIME);
             mockMvc.perform(
-                    get("/api/v1/type/TestType2")
+                    get("/type/TestType2")
                             .param("createdTimeStart", createdTimeStart)
                             .param("createdTimeEnd", createdTimeEnd)
                             .contentType(MediaType.APPLICATION_JSON)
@@ -196,7 +196,7 @@ public class PersistDocumentationTest {
             fail(e.getMessage());
         }
     }
-    
+
     @Test
     // GET (with startsWith constraint)
     public void fetchWithConstraints() {
@@ -204,7 +204,7 @@ public class PersistDocumentationTest {
             defineType("TestType2");
             createType("TestType2", "TestTypeData2");
             mockMvc.perform(
-                    get("/api/v1/type/TestType2")
+                    get("/type/TestType2")
                             .param("c", "first-name|startsWith|J")
                             .contentType(MediaType.APPLICATION_JSON)
                     )
@@ -214,7 +214,7 @@ public class PersistDocumentationTest {
             fail(e.getMessage());
         }
     }
-    
+
     @Test
     // GET (with noAudit flag set to true)
     public void fetchWithNoAudit() {
@@ -222,7 +222,7 @@ public class PersistDocumentationTest {
             defineTypes("TestMultipleTypes");
             createTypes("Course", "CourseData");
             mockMvc.perform(
-                    get("/api/v1/type/Course")
+                    get("/type/Course")
                             .param("noAudit", "true")
                             .contentType(MediaType.APPLICATION_JSON)
                     )
@@ -232,14 +232,14 @@ public class PersistDocumentationTest {
             fail(e.getMessage());
         }
     }
-    
+
     @Test
     public void fetchOne() {
         try {
             defineType("TestType2");
             Long oid = createType("TestType2", "TestTypeData2");
             mockMvc.perform(
-                    get("/api/v1/type")
+                    get("/type")
                             .param("oid", String.valueOf(oid))
                             .contentType(MediaType.APPLICATION_JSON)
                     )
@@ -249,21 +249,21 @@ public class PersistDocumentationTest {
             fail(e.getMessage());
         }
     }
-    
+
     private Long fetchAType(String type) throws JSONException, IOException {
         ClassRepository classRepo = context.getBean(ClassRepository.class);
         Integer cid = classRepo.findByName(type).getId();
         EntityRepository entityRepo = context.getBean(EntityRepository.class);
         return entityRepo.findAllEntitiesByCid(cid).iterator().next().getId();
     }
-    
+
 	private void createTypes(String type, String data) throws JSONException, IOException {
 	    EntityService svc = context.getBean(EntityService.class);
 	    String json = payload(data);
 	    JSONArray array = new JSONArray(json);
         array.forEach(o -> svc.create(type, (JSONObject) o));
 	}
-	
+
 	private Long createType(String type, String data) throws JSONException, IOException {
 	    EntityService svc = context.getBean(EntityService.class);
 	    return svc.create(type, new JSONObject(payload(data)));
@@ -275,23 +275,23 @@ public class PersistDocumentationTest {
         JSONArray array = new JSONArray(json);
         array.forEach(o -> svc.register((JSONObject) o));
     }
-    
+
     private void defineType(String definition) throws JSONException, IOException {
         ClassRegistryService svc = context.getBean(ClassRegistryService.class);
         svc.register(new JSONObject(payload(definition)));
     }
-    
+
     private void linkSchema(String schemaName) throws IOException {
         SchemaService svc = context.getBean(SchemaService.class);
         String schema = payload(schemaName);
         svc.linkSchema(new JSONObject(schema));
     }
-    
+
     private String payload(String payload) throws IOException{
-        Resource r = resolver.getResource(String.format("classpath:%s.json", payload));
+        Resource r = resolver.getResource("classpath:%s.json".formatted(payload));
         return IOUtils.toString(r.getInputStream(), Charset.defaultCharset());
     }
-    
+
     private String asArray(String data) {
         JSONArray array = new JSONArray();
         JSONObject jo = new JSONObject(data);
